# kcmgrub2

./: CHANGELOG  CMakeLists.txt  Messages.sh  README  kcmgrub2.desktop  kcmgrub2.py  kcmgrub2.ui  pbkdf2.py  resdiag.ui
helper/: CMakeLists.txt  helper.cpp  helper.h  kcmgrub2_actions.actions
i18n/: CMakeLists.txt  fr.po  it.po  kcmgrub2.pot  lt.po  nl.po  ru.po  translate.sh
vbespy/: CMakeLists.txt  common.c  common.h  thunk.c  vbe.c  vbe.h  vbetest.c  vesamode.c  vesamode.h  x86-common.c
vbespy/x86emu/: CMakeLists.txt  decode.c
vbespy/x86emu/x86emu/: debug.h
