project( kcmgrub2 )
cmake_minimum_required(VERSION 2.6.2)
add_subdirectory (helper)
add_subdirectory (vbespy)
find_package( KDE4 REQUIRED )
include(KDE4Defaults)
find_package(PythonLibrary)
find_package(PyQt4)
find_package(PyKDE4)

install(FILES kcmgrub2.py kcmgrub2.ui userdiag.ui groupdiag.ui resdiag.ui pbkdf2.py DESTINATION ${DATA_INSTALL_DIR}/kcmgrub2)

kde4_install_icons(${ICON_INSTALL_DIR})
install(FILES kcmgrub2.desktop DESTINATION ${SERVICES_INSTALL_DIR})
install(FILES ${CMAKE_BINARY_DIR}/vbespy/vbetest DESTINATION ${DATA_INSTALL_DIR}/kcmgrub2 PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ WORLD_READ)
